.donotcommit/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 15080
        protocol: HTTP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cluster-ingress
spec:
  gateways:
    - cluster-ingress
  hosts:
    - cluster-ingress.ps-networks.xero-support.com
  http:
    - route:
        - destination:
            host: cluster-ingress
